--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -10,3 +10,7 @@
        url('../assets/fonts/roboto-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../assets/fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
+
+/* dosis-regular - latin */
+
+/* dosis-700 - latin */
