--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -1,8 +1,6 @@
-
-
 .Contact__layout {
   position: absolute;
-  top: -1rem;
+  top: 3rem;
   right: 0;
   width: 15rem;
   height: 3rem;
@@ -10,6 +8,7 @@
   border-radius: 1px;
   background-color: var(--main_white);
   z-index: 4;
+  opacity: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +16,6 @@
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
-  transform: translateY(70px);
 }
 
 
@@ -43,13 +41,12 @@
   width: 15%;
   height: 100%;
   opacity: 0.3;
-  transition: linear 0.2s;
 }
 
 div.Close:hover {
   opacity: 1;
   cursor: pointer;
-  transition: linear 0.2s;
+  transition: linear .2s;
 }
 
 .Close:before, .Close:after {
@@ -112,7 +109,6 @@ p {
   background-color: var(--main_black);
   position: absolute;
   cursor: pointer;
-  
 }
 
 .Contact__text span::after {
