--- a/src/components/podcastsSection/podcastSection.module.css
+++ b/src/components/podcastsSection/podcastSection.module.css
@@ -4,7 +4,8 @@
   margin: 0 auto;
   height: auto;
   background-color: var(--main_white);
-  
+  display: flex;
+  flex-direction: column;
 }
 
 .Content__container {
@@ -13,19 +14,16 @@
   flex-wrap: wrap;
   max-width: 100%;
   padding-bottom: 2rem;
-  
 }
 
-@media(min-width: 320px){
-  .Content__container {
-    justify-content: space-around;
-  }
+.Unpublished {
+  height: auto;
+  width: 12rem;
+  position: absolute;
+  background: red;
+  z-index: 10;
 }
-@media(min-width: 715px){
-  .Content__container {
-    justify-content: space-between;
-  }
-}
+
 
 @media(min-width: 675px){
   .Content__main{
