--- a/src/components/authorSection/authorSection.module.css
+++ b/src/components/authorSection/authorSection.module.css
@@ -34,3 +34,13 @@
     justify-content: space-between;
   }
 }
+
+@media(max-width: 850px){
+  .AuthorSection__layout_container{
+    justify-content: space-around;
+  }
+.AuthorSection__layout h1 {
+  text-align: center;
+}
+
+}
