--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -31,7 +31,6 @@
 }
 
 .Paragraph__main {
-  display: block;
   width: 100%;
   height: 100%;
   opacity: 1;
@@ -49,6 +48,7 @@
 .Animated__paragraph {
   display: none;
 }
+
 
 .PodcastElement__main_unpublished:hover .Animated__paragraph {
   width: 100%;
@@ -97,8 +97,6 @@
 }
 
 
-
-
 .PodcastElement__main:hover {
 box-shadow: 0 6px 18px rgba(100,110,140,.2), 0 5px 18px rgba(100,110,140,.25);
 transition: ease .2s;
@@ -125,23 +123,30 @@ cursor: pointer;
   background-position: 100% 40%;
 }
 
-.PodcastElement__image_container.Jelenski_Episode1{
+
+
+
+.PodcastElement__image_container.Jelenski{
   background-image: url("../../assets/images/1985_jelenski\ 1.png");
   background-position: 100% 60%;
-}
-.PodcastElement__image_container.Jelenski_Episode2 {
-  background-image: url("../../assets/images/1985_jelenski\ 1.png");
-  background-position: 100% 60%;
-}
-.PodcastElement__image_container.Jelenski_Episode3 {
-background-image: url("../../assets/images/1985_jelenski\ 1.png");
-background-position: 100% 60%;
 }
 
-.PodcastElement__image_container.Cieslewicz_Episode1 {
+
+.PodcastElement__image_container.Cieslewicz {
 background-image: url("../../assets/images/Portrait_de_Roman_Cieslewicz\ 1.png");
-background-position: 100% 60%;
+background-position: 100% 30%;
 }
+
+@media(max-width: 700px){
+  .PodcastElement__image_container.Jelenski{
+    background-position: 100% 45%;
+  }
+.PodcastElement__image_container.Cieslewicz{
+  background-position: 100% 25%;
+}
+}
+
+
 
 
 .PodcastElement__content {
@@ -257,10 +262,16 @@ background-position: 100% 60%;
 }
 
 
-@media(min-width: 440px) {
+@media(max-width: 700px) {
   .PodcastElement__main {
-    width: 12.5rem;
+    width: 14rem;
+    height: 19.5rem;
+  }
+  .PodcastElement__main_unpublished{
+    width: 14rem;
     height: 19.5rem;
   }
 }
+
+
 
