--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -1,5 +1,46 @@
+.PodcastList__main_mobile {
+  overflow-y: auto;
+  -webkit-overflow-y-scrolling: touch;
+  -webkit-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  -ms-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  -o-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  -moz-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
+  height: 5.5rem;
+  max-width: 17.5rem;
+  text-align: center;
+}
+
+.PodcastsList__list_mobile{
+  width: 100%;
+}
+
+.PodcastsList__list_mobile li {
+  list-style: none;
+  height: 2rem;
+  background-color: var(--main_white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+}
+
+.PodcastsList__list_mobile li a {
+ text-decoration: none;
+  color: grey;
+  font-size: .85rem;
+  font-weight: 500;
+  width: auto;
+  height: auto;
+  
+}
+
+
+
+
+@media(min-width: 600px){
 .PodcastsList__main {
-  width: 15rem;
+  width: 12.5rem;
   height: 4.5rem;
   margin-top: .5rem;
   border: 1px solid var(--main_black);
@@ -10,55 +51,10 @@
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   position: absolute;
   top: 2.5rem;
-  right: 7rem;
+  right: 8rem;
   overflow-y: auto;
   background-color: var(--main_white);
 }
-
-.PodcastList__main_mobile {
-  overflow-y: auto;
-  -webkit-overflow-y-scrolling: touch;
-  -webkit-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  -ms-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  -o-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  -moz-mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  mask-image: linear-gradient(to top, transparent, black 20px, black 90%, transparent);
-  height: 5rem;
-  width: auto;
- 
-}
-
-.PodcastsList__list_mobile{
-  margin: 0 auto;
-  display: flex; 
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: auto;
-  
-}
-
-.PodcastsList__list_mobile li {
-  list-style: none;
-  height: 2rem;
-  background-color: var(--main_white);
-  
-  display: flex;
-  justify-content: flex-start;
-  width: 12rem;
-}
-
-.PodcastsList__list_mobile li a {
-  text-decoration: none;
-  color: grey;
-  font-size: .75rem;
-  font-weight: 500;
-  
-}
-
-
-
-
 
 .PodcastsList__list {
   margin: 0 auto;
@@ -67,8 +63,32 @@
   align-items: center;
   justify-content: center;
   width: auto;
-  border: 1px solid red;
 }
+
+.PodcastsList__list li {
+  list-style: none;
+  height: 2rem;
+  width: 7.5rem;
+  background-color: var(--main_white);
+  
+  margin-left: .15rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.PodcastsList__list li a {
+  text-decoration: none;
+  color: grey;
+  font-size: .75rem;
+  font-weight: 500;
+  transform: translateX(7.5%);
+}
+
+.PodcastsList__list li a:hover {
+  color: var(--main_black)
+}
+}
+
 
 
 .PodcastsList__list li {
@@ -78,7 +98,7 @@
   padding: 0 .5rem;
   background-color: var(--main_white);
   float: left;
-  border:1px solid blue;
+  
 }
 
 .PodcastsList__list li a {
@@ -86,14 +106,11 @@
   color: grey;
   font-size: .75rem;
   font-weight: 500;
-  border: 1px solid green;
   width: 10rem;
 }
 
 .PodcastsList__list li a:hover {
   color: var(--main_black)
 }
-
-
 
 
