--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,6 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--main_grey);
+  overflow-anchor: none;
 }
 
 
