changes after adding brudzinski

--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -51,9 +51,8 @@ background-position: 100% 30%;
 }
 
 .PodcastElement__image_container.Brudzynski {
-  background-image: url("../../assets/images/Tadeusz_Brudzyński.png");
+  background-image: url("../../assets/images/Tadeusz_Brudzyński.png");
   background-position: 100% 25%;
-  background-size: cover;
 }
 
 
