italics added to Brudzinski podcast

--- a/src/components/podcastTemplate/podcastTemplate.module.css
+++ b/src/components/podcastTemplate/podcastTemplate.module.css
@@ -55,6 +55,10 @@
   font-size: calc(.85rem - 15%);
 }
 
+.Italic {
+  font-style: italic;
+}
+
 .Paragraph_link{
   color:var(--main_black);
   font-weight: 600;
