--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -4,14 +4,15 @@
   position: relative;
   margin: 0 auto;
   max-width: 100%;
-  height: 12.5rem;
+  height: 15.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-;
+  
 }
 
-.Header__main picture img {
-  width: 100%;
+.Image_container {
+  height: 50%;
 }
 
 @media (min-width: 1005px) {
