--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,17 +3,18 @@
 .Header__main {
   position: relative;
   margin: 0 auto;
-  max-width: 100%;
-  height: 15.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-;
-  
+  width: 100%;
+  height: 12.5rem;
 }
 
 .Image_container {
-  height: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
+
+
 
 @media (min-width: 1005px) {
   .Header__main {
@@ -25,7 +26,7 @@
   .Header__main {
     margin: 0 auto;
     max-width: 100%;
-    height: 15.5rem;
+    height: 14.5rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -74,7 +75,7 @@
     font-family: 'Doris', Roboto, sans-serif;
     display: inline;
     position: absolute;
-    top: 15.65rem;
+    top: 16.05rem;
     right: 13.75rem;
     z-index: 2;
     color: rgb(255, 210, 210);
