--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -1,22 +1,20 @@
 .PodcastElement__main {
   position: relative;
-  height: 19.5rem;
-  width: 12.5rem;
+  height: 20rem;
+  width: 13rem;
   margin-bottom: 2rem;
   border: .25px solid var(--main_grey);
-  
   transition: ease .2s;
   background-color: var(--main_white);
-  box-shadow: 1px 4px 14px rgba(100,110,140,.15), 1px 4px 6px rgba(100,110,140,.15);
-  
+  box-shadow: 2px 6px 16px rgba(100,110,140,.15), 1px 4px 6px rgba(100,110,140,.15);
 }
 
 
 
 .PodcastElement__main:hover {
-box-shadow: 0 6px 18px rgba(100,110,140,.2), 0 5px 18px rgba(100,110,140,.25);
-transition: ease .2s;
-transform: translateY(-1px);
+box-shadow: 0 10px 22px rgba(82, 87, 104, 0.2), 0 5px 18px rgba(86, 91, 105, 0.25);
+transition: ease .25s;
+transform: translateY(-2px);
 cursor: pointer;
 }
 
@@ -69,11 +67,10 @@ background-position: 100% 30%;
 
 .PodcastElement__content {
   width: 100%;
-  height: 11.25rem;
-  padding: 0 .25rem;
+  height: 11.5rem;
+  padding: 0 .5rem;
   background-color: var(--main_white);
   border-bottom: 1.5px solid var(--main_black);
-  padding-bottom: 0.5rem;
 } 
 
 .PodcastElement__content a {
@@ -143,7 +140,7 @@ background-position: 100% 30%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 1rem;
+  
 }
 .PodcastElement__content_listen div {
   width: 65%;
