--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -50,6 +50,9 @@
   font-size: calc(1.25rem - 15%);
 }
 
+.Podcast__paragraph_main{
+  font-size: calc(.5rem - 15%);
+}
 
 .Podcast__paragraph_minor{
   font-size: calc(.85rem - 15%);
