checking rich text rendering options

--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -51,9 +51,8 @@
 }
 
 .Podcast__paragraph_main {
-  font-size: calc(3.95rem - 15%);
+  font-size: calc(.95rem - 15%);
 }
-
 
 .Italic {
   font-style: italic;
