--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -69,6 +69,11 @@ background-position: 100% 30%;
   background-position: 50% 45%;
   background-size: cover;
 }
+.PodcastElement__image_container.Niemiec {
+  background-image: url("../../assets//images/Maciej\ Niemiec_phot\ 1.png");
+  background-position: 50% 35%;
+  background-size: cover;
+}
 
 
 @media(max-width: 700px){
